# Team36HackIreland

./: .gitignore  README.md  generated_email.json
.github/workflows/: ruff.yml
Backend/: emaildrafting.py  emailsending.py
Transcription/: speechtotext.py
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/Evaluation/: scriptevaluation.py
backend/Transcription/: extractaudio.py
backend/bodylanguage/: eyecontactscore.py
backend/evaluation/: evaluation_api.py  script_evaluation.py
backend/questions/: answerfeedback.py  questiongeneration.py
backend/snapshots/: snapshot_runner.py
backend/transcription/: extractaudio.py  get_transcription.py  speechtotext.py  transcription_api.py
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Answer.jsx  Feedback.jsx  Home.js  Home.jsx
