[project]
name = "Backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "moviepy>=2.1.2",
    "openai>=1.63.2",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
